[package]
name = "test"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = { git = "https://github.com/nannou-org/nannou" }

[[bin]]
name = "polygon"
path = "src/polygon/main.rs"
